# scTDRP

./: .gitignore  LICENSE  README.md  TODO.md  debug_compare.py  make_figure1.py  modules.json  preprocess_ball.py  pyproject.toml  requirements.txt  run_OT_comparison.py  run_aml5_deep_dive.py  run_ball_microenv_scTDRP.py  run_ball_scTDRP.py  run_ball_subtype_scTDRP.py  run_benchmark_v2.py  run_comprehensive_benchmark_v1_backup.py  run_erythroid_scTDRP.py  run_gbm_validation.py  run_mds_scTDRP.py  run_method_comparison.py  run_simulation_benchmark.py  setup.py
docs/: API.md  capability_matrix.md
examples/: erythroid_example.py
manuscript_draft/: Discussion.md  Figure_Legends.md  Introduction.md  Methods.md  Results.md  Table_S2.md  manuscript_full.md
scripts/: simulation_validation.py  simulation_validation_v2.py  simulation_validation_v3.py
src/scTDRP/: __init__.py  core.py  distance.py  io.py  metacells.py  module.py  plotting.py  repair.py  utils.py
tests/: test_core.py
